--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a:hover {
 }
 
 .bloc {
-    width: 100%;
+    /*width: 100%;*/  /*supprimé*/
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
@@ -39,13 +39,14 @@ a:hover {
     position: relative;
 }
 
-.bloc .container {
+/*.bloc .container {
     padding-left: 0;
     padding-right: 0;
-}
+}*/ /*supprimé*/
 
 .bloc-lg {
-    padding: 100px 50px;
+    /*padding: 100px 50px;*/  /*supprimé*/
+    padding: 100px 30px 50px 30px; /*ajouté*/
 }
 
 .bloc-md {
@@ -317,7 +318,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    /*margin-right: -16px;*/ /*supprimé*/
     float: right;
     z-index: 1;
 }
@@ -360,47 +361,6 @@ a:hover {
     float: right;
     position: relative;
     z-index: 2;
-}
-
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center .navbar-header {
-        width: 100%;
-    }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
 }
 
 .nav > li > .dropdown a {
@@ -654,9 +614,9 @@ a {
     color: #575757!important;
 }
 
-.container {
+/*.container {
     max-width: 1000px;
-}
+}*/ /*supprimé*/
 
 .hero-bloc-text {
     font-size: 38px;
@@ -697,6 +657,8 @@ p {
     padding: 12px 28px 12px 28px;
     font-size: 16px;
     font-weight: 700;
+    border-radius: 15px;
+    border: none 1px #f3976C;
 }
 
 .social {
@@ -775,7 +737,11 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: black!important; /*modifié*/
+}
+
+.text-center {
+    text-align: center;
 }
 
 .btn-atomic-tangerine {
@@ -825,6 +791,18 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (min-resolution: 1.5) {
+    .b-parallax {
+        background-attachment: scroll;
+    } /*ajouté*/
+}
+
+/*@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+    .b-parallax {
+        background-attachment: scroll;
+    }
+}*/  /*supprimé*/
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -839,26 +817,17 @@ h4 {
     }
 }
 
-@media (max-width: 992px) and (min-width: 768px) {
-    .navbar .nav {
-        max-width: 80%
-    }
-    .nav-center.navbar .nav {
-        max-width: 100%
-    }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
-}
+}*/ /*supprimé*/
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
-}
+} /*ajouté*/
 
 @media (max-width: 991px) {
     .container {
@@ -889,7 +858,21 @@ h4 {
     }
 }
 
+@media (max-width: 992px) and (min-width: 768px) {
+    .navbar .nav {
+        max-width: 80%
+    }
+    .nav-center.navbar .nav {
+        max-width: 100%
+    }
+}
+
 @media (max-width: 767px) {
+
+    .bloc-mob-center-text {
+        text-align: center;
+    }
+
     .page-container {
         overflow-x: hidden;
         position: relative;
@@ -1028,15 +1011,54 @@ h4 {
     }
 }
 
+@media (min-width: 768px) {
+    .site-navigation {
+        position: absolute;
+        top: 25%; /*modifié*/
+        right: 40px; /*modifié*/
+        list-style-type: none; /*modifié*/
+        transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
+    }
+    .site-navigation a {
+        text-decoration: none;
+    }
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
+        color: #484848;
+    }
+    .nav-invert .site-navigation {
+        left: 0;
+        right: 0;
+    }
+    .nav-center {
+        text-align: center;
+    }
+    .nav-center .navbar-header {
+        width: 100%;
+    }
+    .nav-center .navbar-header,
+    .nav-center .navbar-brand,
+    .nav-center .nav > li {
+        float: none;
+        display: inline-block;
+    }
+    .nav-center .site-navigation {
+        position: relative;
+        width: 100%;
+        right: 0;
+        margin-right: 0px;
+        margin-top: 20px;
+    }
+    .nav-center.mini-nav .navbar-toggle {
+        float: none;
+        margin: 10px auto 0;
+    }
+}
+
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
-    }
-}
-
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
-        text-align: center;
     }
 }
