--- a/style.css
+++ b/style.css
@@ -8,7 +8,32 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-/*footer index*/
+/************************** formulaire *************************/
+.col-sm-6 > form {
+    padding: 5px 40px 5px 40px;
+}
+
+.space-adress {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.form-group label {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding-top: 5px;
+}
+
+.form-group .form-control {
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 12px;
+    border: 2px rgba(0, 0, 0, .1) solid;
+}
+
+/****************************** footer index ***********************************/
 .row > .col-sm-4 {
     margin-right: 0; 
     margin-left: 0;
@@ -35,6 +60,8 @@ body {
     display: flex;
 }
 
+/********************************************/
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -57,7 +84,6 @@ a:hover {
 }
 
 .bloc {
-    /*width: 100%;*/  /*supprimé*/
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
@@ -68,14 +94,8 @@ a:hover {
     position: relative;
 }
 
-/*.bloc .container {
-    padding-left: 0;
-    padding-right: 0;
-}*/ /*supprimé*/
-
 .bloc-lg {
-    /*padding: 100px 50px;*/  /*supprimé*/
-    padding: 100px 30px 50px 30px; /*ajouté*/
+    padding: 100px 30px 50px 30px; 
 }
 
 .bloc-md {
@@ -346,7 +366,6 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    /*margin-right: -16px;*/ /*supprimé*/
     float: right;
     z-index: 1;
 }
@@ -642,10 +661,6 @@ a {
     color: #575757!important;
 }
 
-/*.container {
-    max-width: 1000px;
-}*/ /*supprimé*/
-
 .hero-bloc-text {
     font-size: 38px;
 }
@@ -769,10 +784,6 @@ h4 {
     font-weight: 600;
 }
 
-/*.col-sm-12 > h1 + p {
-    color: black!important; 
-}*/
-
 .text-center {
     text-align: center;
 }
@@ -829,14 +840,8 @@ h4 {
 @media only screen and (min-width: 1024px) and (max-width: 1366px) and (min-resolution: 1.5) {
     .b-parallax {
         background-attachment: scroll;
-    } /*ajouté*/
+    } 
 }
-
-/*@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}*/  /*supprimé*/
 
 @media (max-width: 1024px) {
     .bloc {
@@ -852,17 +857,23 @@ h4 {
     }
 }
 
-/*@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    .b-parallax {
-        background-attachment: scroll;
-    }
-}*/ /*supprimé*/
-
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .b-parallax {
         background-attachment: scroll;
     }
-} /*ajouté*/
+} 
+
+@media (max-width: 1000px) {
+    
+    .bloc-sm {
+        display: flex;
+        justify-content: center;
+    }
+
+    .align-img-contact {
+        padding: 20px 0
+    }
+}
 
 @media (max-width: 991px) {
     .container {
@@ -902,7 +913,99 @@ h4 {
     }
 }
 
+@media (min-width: 768px) {
+    .site-navigation {
+        position: absolute;
+        top: 25%; 
+        right: 40px; 
+        list-style-type: none; 
+        transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
+    }
+    .site-navigation a {
+        text-decoration: none;
+    }
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
+        color: #484848;
+    }
+    .nav-invert .site-navigation {
+        left: 0;
+        right: 0;
+    }
+    .nav-center {
+        text-align: center;
+    }
+    .nav-center .navbar-header {
+        width: 100%;
+    }
+    .nav-center .navbar-header,
+    .nav-center .navbar-brand,
+    .nav-center .nav > li {
+        float: none;
+        display: inline-block;
+    }
+    .nav-center .site-navigation {
+        position: relative;
+        width: 100%;
+        right: 0;
+        margin-right: 0px;
+        margin-top: 20px;
+    }
+    .nav-center.mini-nav .navbar-toggle {
+        float: none;
+        margin: 10px auto 0;
+    }
+}
+
 @media (max-width: 767px) {
+    
+    .med-width-whitespace {
+        max-width: 500px;
+    }
+
+    .img-responsive {
+        width: 100%;
+        max-height: 300px;
+        object-fit: cover;
+    }
+
+    .social {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .navbar-brand {
+        display: flex;
+        justify-content: center;
+    }
+
+    .navbar .nav > li {
+        border: none;
+        background-color: white;
+    }
+
+    .navbar .nav {
+        border-top: none;
+        padding-left: 0;
+    }
+
+    .navbar-collapse {
+        display: flex;
+        justify-content: center;
+    }
+    .site-navigation a {
+        text-decoration: none;
+    }
+
+    .site-navigation li {
+        list-style-type: none;
+        padding-left: 0;
+    }
 
     .bloc-mob-center-text {
         text-align: center;
@@ -1046,127 +1149,10 @@ h4 {
     }
 }
 
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 25%; /*modifié*/
-        right: 40px; /*modifié*/
-        list-style-type: none; /*modifié*/
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .site-navigation a {
-        text-decoration: none;
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center .navbar-header {
-        width: 100%;
-    }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
-}
-
-@media (max-width: 400px) {
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
-
-@media (max-width: 1000px) {
-    
-    .bloc-sm {
-        display: flex;
-        justify-content: center;
-    }
-
-    .align-img-contact {
-        padding: 20px 0
-    }
-}
-
-@media (max-width: 767px) {
-    
-    .med-width-whitespace {
-        max-width: 500px;
-    }
-
-    .img-responsive {
-        width: 100%;
-        max-height: 300px;
-        object-fit: cover;
-    }
-
-    .social {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: space-around;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-}
-
 @media (max-width: 650px) {
 
     .img-resp {
         width: 90%;
-    }
-}
-
-@media (max-width: 767px) {
-
-    .navbar-brand {
-        display: flex;
-        justify-content: center;
-    }
-
-    .navbar .nav > li {
-        border: none;
-        background-color: white;
-    }
-
-    .navbar .nav {
-        border-top: none;
-        padding-left: 0;
-    }
-
-    .navbar-collapse {
-        display: flex;
-        justify-content: center;
-    }
-    .site-navigation a {
-        text-decoration: none;
-    }
-
-    .site-navigation li {
-        list-style-type: none;
-        padding-left: 0;
     }
 }
 
@@ -1177,27 +1163,9 @@ h4 {
     }
 }
 
-
-.col-sm-6 > form {
-    padding: 5px 40px 5px 40px;
-}
-
-.space-adress {
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-.form-group label {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    padding-top: 5px;
-}
-
-.form-group .form-control {
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 12px;
-    border: 2px rgba(0, 0, 0, .1) solid;
+@media (max-width: 400px) {
+    .bloc {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
